added verify function to config

--- a/test.conf
+++ b/test.conf
@@ -2,25 +2,29 @@
 
 # Window/screen settings
 title test
-fov 120.0
+fov 60.0
 fullscreen true
 width 3840
 height 2160
 view_box_dimensions 2000.0
 vsync false
-post_processing true
+post_processing false
 
 # Particle settings
-color1 1.0 0.0 0.1
-color2 1.0 1.0 0.0
+# color1 1.0 0.0 0.1
+# color2 1.0 1.0 0.0
+# color1 0.972482 0.50095 0.936351
+# color2 0.0609484 0.0257441 0.166107
+color1 0.982187 0.898206 0.838165
+color2 0.381034 0.0774148 0.626515
 
 # particle_count 2000
 particle_count 1048576
 particle_mass 1.0
-particle_size 3
+particle_size 1
 
 particle_init_pos 0 0 -1000.0
-particle_init_radius 450.0
+particle_init_radius 350.0
 
 # Gravity settings
 gravity_mass 1000.0
