--- a/test.conf
+++ b/test.conf
@@ -2,13 +2,13 @@
 
 # Window/screen settings
 title test
-fov 60.0
+fov 120.0
 fullscreen true
 width 3840
 height 2160
 view_box_dimensions 2000.0
 vsync false
-post_processing false
+post_processing true
 
 # Particle settings
 # color1 1.0 0.0 0.1
@@ -20,19 +20,20 @@ color2 0.381034 0.0774148 0.626515
 
 # particle_count 2000
 particle_count 1048576
-particle_mass 1.0
+particle_mass 1
 particle_size 1
 
 particle_init_pos 0 0 -1000.0
 particle_init_radius 350.0
 
 # Gravity settings
-gravity_mass 1000.0
-# gravity_mass 100000.0
+# gravity_mass 1000.0
+gravity_mass 100000.0
 gravity_static false
 
 # Font
 font resources/fonts/DroidSansMono.ttf
+# font resources/fonts/Antonio-Bold.ttf
 
 # Shaders
 particle_vert resources/shaders/particle.vert
@@ -42,9 +43,12 @@ font_vert resources/shaders/font/font.vert
 font_frag resources/shaders/font/font.frag
 
 post_processing_vert resources/shaders/quad.vert
-post_processing_frag resources/shaders/postprocessing/chromatic_abberation.frag
+# post_processing_frag resources/shaders/postprocessing/chromatic_abberation.frag
+# post_processing_frag resources/shaders/postprocessing/blur.frag
+# post_processing_frag resources/shaders/postprocessing/edge_detection.frag
+post_processing_frag resources/shaders/postprocessing/quad.frag
 
 # particle_init_comp resources/shaders/cube_init.comp
 particle_init_comp resources/shaders/sphere_init.comp
-particle_physics_comp resources/shaders/physics.comp
-# particle_physics_comp resources/shaders/euler_physics.comp
+# particle_physics_comp resources/shaders/physics.comp
+particle_physics_comp resources/shaders/euler_physics.comp
