switch between full gravity mass and 0.0 + handled divide by 0 errors in physics shaders

--- a/test.conf
+++ b/test.conf
@@ -11,12 +11,12 @@ vsync false
 post_processing true
 
 # Particle settings
-# color1 1.0 0.0 0.1
-# color2 1.0 1.0 0.0
+color1 1.0 0.0 0.1
+color2 1.0 1.0 0.0
 # color1 0.972482 0.50095 0.936351
 # color2 0.0609484 0.0257441 0.166107
-color1 0.982187 0.898206 0.838165
-color2 0.381034 0.0774148 0.626515
+# color1 0.982187 0.898206 0.838165
+# color2 0.381034 0.0774148 0.626515
 
 # particle_count 2000
 particle_count 1048576
@@ -27,7 +27,7 @@ particle_init_pos 0 0 -1000.0
 particle_init_radius 350.0
 
 # Gravity settings
-# gravity_mass 1000.0
+# gravity_mass 100.0
 gravity_mass 100000.0
 gravity_static false
 
@@ -50,5 +50,5 @@ post_processing_frag resources/shaders/postprocessing/quad.frag
 
 # particle_init_comp resources/shaders/cube_init.comp
 particle_init_comp resources/shaders/sphere_init.comp
-# particle_physics_comp resources/shaders/physics.comp
-particle_physics_comp resources/shaders/euler_physics.comp
+particle_physics_comp resources/shaders/physics.comp
+# particle_physics_comp resources/shaders/euler_physics.comp
