massive refactor - main function moved in to app class

--- a/test.conf
+++ b/test.conf
@@ -1,14 +1,16 @@
-# comment
-
 # Window/screen settings
 title test
 fov 120.0
 fullscreen true
 width 3840
 height 2160
+# fullscreen false
+# width 1000
+# height 1000
 view_box_dimensions 2000.0
 vsync false
 post_processing true
+sim_speed 10.0
 
 # Particle settings
 color1 1.0 0.0 0.1
@@ -45,10 +47,10 @@ font_frag resources/shaders/font/font.frag
 post_processing_vert resources/shaders/quad.vert
 # post_processing_frag resources/shaders/postprocessing/chromatic_abberation.frag
 # post_processing_frag resources/shaders/postprocessing/blur.frag
-# post_processing_frag resources/shaders/postprocessing/edge_detection.frag
-post_processing_frag resources/shaders/postprocessing/quad.frag
+post_processing_frag resources/shaders/postprocessing/edge_detection.frag
+# post_processing_frag resources/shaders/postprocessing/quad.frag
 
 # particle_init_comp resources/shaders/cube_init.comp
 particle_init_comp resources/shaders/sphere_init.comp
-particle_physics_comp resources/shaders/physics.comp
-# particle_physics_comp resources/shaders/euler_physics.comp
+# particle_physics_comp resources/shaders/physics.comp
+particle_physics_comp resources/shaders/euler_physics.comp
