--- a/template.conf
+++ b/template.conf
@@ -8,6 +8,7 @@ width <width>
 height <height>
 vsync <true/false>
 post_processing <true/false>
+# sim_speed <speed>
 
 # Particle settings
 color1 <r> <g> <b>
