improved resource management

--- a/test.conf
+++ b/test.conf
@@ -9,7 +9,7 @@ height 2160
 # height 1000
 view_box_dimensions 2000.0
 vsync false
-post_processing true
+post_processing false
 sim_speed 10.0
 
 # Particle settings
@@ -50,7 +50,7 @@ post_processing_vert resources/shaders/quad.vert
 post_processing_frag resources/shaders/postprocessing/edge_detection.frag
 # post_processing_frag resources/shaders/postprocessing/quad.frag
 
-# particle_init_comp resources/shaders/cube_init.comp
-particle_init_comp resources/shaders/sphere_init.comp
+particle_init_comp resources/shaders/cube_init.comp
+# particle_init_comp resources/shaders/sphere_init.comp
 # particle_physics_comp resources/shaders/physics.comp
 particle_physics_comp resources/shaders/euler_physics.comp
