added static gravity point

--- a/test.conf
+++ b/test.conf
@@ -31,7 +31,7 @@ particle_init_radius 350.0
 # Gravity settings
 # gravity_mass 100.0
 gravity_mass 100000.0
-gravity_static false
+gravity_static true
 
 # Font
 font resources/fonts/DroidSansMono.ttf
