normalised code format + added comments

--- a/template.conf
+++ b/template.conf
@@ -8,7 +8,7 @@ width <width>
 height <height>
 vsync <true/false>
 post_processing <true/false>
-# sim_speed <speed>
+sim_speed <speed>
 
 # Particle settings
 color1 <r> <g> <b>
