--- a/test.conf
+++ b/test.conf
@@ -31,7 +31,7 @@ particle_init_radius 350.0
 # Gravity settings
 # gravity_mass 100.0
 gravity_mass 100000.0
-gravity_static true
+gravity_static false
 
 # Font
 font resources/fonts/DroidSansMono.ttf
@@ -52,5 +52,5 @@ post_processing_frag resources/shaders/postprocessing/edge_detection.frag
 
 particle_init_comp resources/shaders/cube_init.comp
 # particle_init_comp resources/shaders/sphere_init.comp
-# particle_physics_comp resources/shaders/physics.comp
-particle_physics_comp resources/shaders/euler_physics.comp
+particle_physics_comp resources/shaders/physics.comp
+# particle_physics_comp resources/shaders/euler_physics.comp
