made post processing toggleable

--- a/configs/euler_physics.conf
+++ b/configs/euler_physics.conf
@@ -6,7 +6,7 @@ width 3840
 height 2160
 view_box_dimensions 4000.0
 vsync false
-post_processing false
+post_processing true
 sim_speed 10.0
 
 # Particle settings
