separated the fragment shaders into different color spaces

--- a/configs/test.conf
+++ b/configs/test.conf
@@ -39,7 +39,8 @@ font resources/fonts/DroidSansMono.ttf
 
 # Shaders
 particle_vert resources/shaders/particle.vert
-particle_frag resources/shaders/particle.frag
+# particle_frag resources/shaders/particle_rgb.frag
+particle_frag resources/shaders/particle_oklab.frag
 
 font_vert resources/shaders/font/font.vert
 font_frag resources/shaders/font/font.frag
