--- a/configs/euler_physics.conf
+++ b/configs/euler_physics.conf
@@ -14,7 +14,7 @@ color1 1.0 0.0 0.7
 color2 1.0 1.0 0.0
 
 particle_count 1048576
-particle_mass 1
+particle_mass 100
 particle_size 1
 
 particle_init_pos 0 0 -1800.0
@@ -29,7 +29,8 @@ font resources/fonts/DroidSansMono.ttf
 
 # Shaders
 particle_vert resources/shaders/particle.vert
-particle_frag resources/shaders/particle.frag
+# particle_frag resources/shaders/particle_rgb.frag
+particle_frag resources/shaders/particle_oklab.frag
 
 font_vert resources/shaders/font/font.vert
 font_frag resources/shaders/font/font.frag
