--- a/configs/my_physics.conf
+++ b/configs/my_physics.conf
@@ -21,7 +21,7 @@ particle_init_pos 0 0 -1000.0
 particle_init_radius 350.0
 
 # Gravity settings
-gravity_mass 10000.0
+gravity_mass 1000.0
 gravity_static false
 
 # Font
@@ -29,7 +29,8 @@ font resources/fonts/DroidSansMono.ttf
 
 # Shaders
 particle_vert resources/shaders/particle.vert
-particle_frag resources/shaders/particle.frag
+# particle_frag resources/shaders/particle_rgb.frag
+particle_frag resources/shaders/particle_oklab.frag
 
 font_vert resources/shaders/font/font.vert
 font_frag resources/shaders/font/font.frag
