--- a/configs/euler_physics.conf
+++ b/configs/euler_physics.conf
@@ -6,7 +6,7 @@ width 3840
 height 2160
 view_box_dimensions 4000.0
 vsync false
-post_processing true
+post_processing false
 sim_speed 10.0
 
 # Particle settings
@@ -14,7 +14,7 @@ color1 1.0 0.0 0.7
 color2 1.0 1.0 0.0
 
 particle_count 1048576
-particle_mass 100
+particle_mass 1
 particle_size 1
 
 particle_init_pos 0 0 -1800.0
